# libddc

./: .gitignore  Makefile.am  autogen.sh  configure.ac
docs/api/: Makefile.am  clean.sh  libddc-docs.sgml
libddc-glib/: .gitignore  Makefile.am  libddc-client.c  libddc-client.h  libddc-common.c  libddc-common.h  libddc-control.c  libddc-control.h  libddc-device.c  libddc-device.h  libddc-glib.pc.in  libddc-self-test.c  libddc-version.h.in  libddc.h
tools/: .gitignore  Makefile.am  libddc-util.c  libddc-util.xml
